# anaj-bahi

./: .env.example  .firebaserc  .gitignore  CLAUDE.md  DEPLOY.md  README.md  firebase.json  firestore.rules
.claude/agents/: agent-builder.md  code-generator.md  qa-auditor.md  spec-writer.md
.github/workflows/: deploy-pages.yml
alembic/: env.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  pyproject.toml  wsgi.py
backend/app/: __init__.py  config.py  db.py  deps.py  init_db.py  main.py  models.py  schemas.py
backend/tests/: conftest.py  test_cors.py  test_sync.py
docs/: SESSION_LOG.md
frontend/: .env.example  .gitignore  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts  vitest.rules.config.ts  vitest.setup.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/scripts/: apply-base-path.mjs  gen-version.mjs  stamp-sw.mjs
harness/patterns/: code.md  phases.md  project-layout.md  tech-stack.md
harness/rules/: ai-agents.md
spec/: agent.md  api.md  architecture.md  data.md  roadmap.md  ui.md
spec/capabilities/: activity-log.md  backup-restore.md  bill-edit-lock.md  bill-list-and-reopen.md  business-profile.md  business-tenancy.md  cloud-sync.md  create-bill.md  deductions-and-totals-calc.md  due-list.md  employee-management.md  farmer-autocomplete.md  firestore-store.md  first-run-role-chooser.md  google-auth.md  i18n-toggle.md  index.md  offline-queue.md  payments.md  personal-profile.md  phone-auth.md  pin-lock.md  post-save-share.md  (+6 more)
src/: __main__.py
(+107 files in other folders)
